Updated big changes for menus organization