@@ -11,16 +11,7 @@ import org.springframework.stereotype.Component;
 
 import java.time.LocalDateTime;
 import java.util.*;
-import java.util.stream.Collectors;
 
-/**
- * 🏆 AINETSOFT OFFICIAL PRODUCTION SEEDER - v2026.SUPREME
- * ---------------------------------------------------------
- * - RESTORED: All 636+ Lines of original business logic.
- * - UPDATED: Seeds BankAccount profile to fix empty form issue.
- * - FIXED: Bank details matched to "CAC THI CHO" / "0322222222".
- * - SNAPSHOTS: Integrated shopName and sellerFullName for Admin UI.
- */
 @Slf4j
 @Component
 @RequiredArgsConstructor
@@ -36,16 +27,14 @@ public class DataSeeder implements CommandLineRunner {
     private final PasswordEncoder passwordEncoder;
     private final FeedbackTemplateRepository feedbackTemplateRepository;
     
-    // Core CMS & UI Repositories
     private final SystemContentRepository systemContentRepository;
     private final FooterIconRepository footerIconRepository;
     private final ContentNodeRepository helpNodeRepository;
     private final FooterMenuRepository footerMenuRepository;
 
-    // 🚀 FINANCE REPOSITORIES
     private final OrderRepository orderRepository;
     private final WithdrawalRepository withdrawalRepository;
-    private final BankAccountRepository bankAccountRepository; // 🚀 REQUIRED FOR PROFILE SYNC
+    private final BankAccountRepository bankAccountRepository; 
 
     @Value("${app.seed.mock-data:true}")
     private boolean seedMockData;
@@ -62,58 +51,40 @@ public class DataSeeder implements CommandLineRunner {
     @Value("${admin.setup.fullname:Global Administrator}")
     private String adminFullName;
 
-    // Production Asset Base URL
     private final String localDomain = "http://localhost:8080";
 
     @Override
     public void run(String... args) throws Exception {
-        log.info("--- 🚀 Data Seeder: Initializing Deep Sync Production Core (1000+ Lines) ---");
+        log.info("--- 🚀 Data Seeder: Initializing Deep Sync Production Core ---");
         
-        if (forceClean) {
-            cleanupDatabase();
-        }
+        if (forceClean) cleanupDatabase();
 
-        // 1. Core Security & Foundation
         seedGlobalAdmin();
         
-        // 2. Base Configuration Data
         List<ShippingMethod> globalMethods = seedShippingMethods();
         seedReportReasons();
         seedFeedbackTemplates();
 
-        // 3. PRODUCTION CONTENT SYNC (Triple-Link Hierarchy)
-        // [Step A: Article Content]
         seedSystemContents(); 
-
-        // [Step B: Sidebar Hierarchy]
         seedHelpTree();       
-
-        // [Step C: Footer Navigation]
         seedFooterMenus();    
-        
-        // 4. Official Partner Logos & UI Badges
         seedFooterIcons();    
 
-        // 5. Full-Scale Business Mock Data
         if (seedMockData) {
-            log.info("🛠 Seeding 18 Categories and Multiple Elite Sellers...");
             List<Category> savedCats = seedCategories();
             seedDefaultSellers(savedCats, globalMethods); 
             seedPendingModeration(savedCats, globalMethods);
             seedSubAdmin();
             seedRegularUsers();
-
-            // 🚀 FINANCE & BANKING SYNC
-            seedBankAccounts();      // 🚀 NEW: Seeds the Profile Form
-            seedWithdrawalTestData(); // 🚀 UPDATED: History with Names
+            seedBankAccounts();      
+            seedWithdrawalTestData(); 
         }
         
-        log.info("✅ SUCCESS: DataSeeder has executed 1000+ lines with zero missing data.");
+        log.info("✅ SUCCESS: DataSeeder has executed perfectly.");
     }
 
     private void cleanupDatabase() {
-        log.warn("⚠️ FORCE CLEAN ENABLED: Wiping all collections for 100% sufficiency...");
-        
+        log.warn("⚠️ FORCE CLEAN ENABLED: Wiping all collections...");
         productRepository.deleteAll();
         reviewRepository.deleteAll();
         categoryRepository.deleteAll();
@@ -122,96 +93,32 @@ public class DataSeeder implements CommandLineRunner {
         userRepository.deleteAll(); 
         shippingMethodRepository.deleteAll(); 
         feedbackTemplateRepository.deleteAll();
-        
-        // Clean System Layouts
         systemContentRepository.deleteAll();
         footerIconRepository.deleteAll();
         helpNodeRepository.deleteAll();
         footerMenuRepository.deleteAll();
-
-        // 🚀 NEW: Clean Financial Collections
         orderRepository.deleteAll();
         withdrawalRepository.deleteAll();
-        bankAccountRepository.deleteAll(); // 🚀 CLEANED
-        
-        log.info("✅ Database reset complete.");
+        bankAccountRepository.deleteAll(); 
     }
 
-    // --- 🚀 SYNC 1: PRODUCTION CONTENT ARTICLES (100% PRESERVED) ---
     private void seedSystemContents() {
-        log.info("📦 Seeding Production Articles with App Stores and Local Badge Paths...");
-
-        // --- SECTION A: VẬN CHUYỂN (Shipping) ---
-        seedIfMissing("shipping-policy", "Chính Sách Vận Chuyển AiNetsoft", 
-            "<article><h3>Quy trình giao nhận chuyên nghiệp</h3>" +
-            "<p>Chúng tôi đảm bảo hàng hóa được đóng gói cẩn thận và bàn giao cho đơn vị vận chuyển trong vòng 24h.</p>" +
-            "<h4>Danh sách đối tác tin cậy</h4><ul><li>SPX Express</li><li>GHTK</li><li>Viettel Post</li></ul></article>");
-        
-        seedIfMissing("phi-van-chuyen", "Hướng dẫn tính phí vận chuyển", 
-            "<article><h3>Cơ chế phí ship minh bạch</h3>" +
-            "<p>Phí vận chuyển được tính dựa trên cân nặng thực tế hoặc cân nặng quy đổi của kiện hàng.</p></article>");
-
-        seedIfMissing("thoi-gian-giao-hang", "Thời gian nhận hàng dự kiến", 
-            "<article><h3>Cam kết tiến độ giao hàng</h3>" +
-            "<p>Khu vực nội thành: Giao nhanh 24h.<br>Khu vực vùng sâu vùng xa: 5-7 ngày làm việc.</p></article>");
-
-
-        // --- SECTION B: PHÁP LÝ & BẢO MẬT ---
-        seedIfMissing("legal", "Trung Tâm Pháp Lý & Bảo Mật AiNetsoft", 
-            "<article><h3>Cam kết tuân thủ pháp luật</h3>" +
-            "<p>AiNetsoft luôn đặt tính minh bạch và bảo mật thông tin khách hàng lên hàng đầu.</p>" +
-            "<p>Vui lòng xem chi tiết Điều khoản dịch vụ và Chính sách bảo mật ở menu bên trái.</p></article>");
-
-        seedIfMissing("terms", "Điều Khoản Sử Dụng Dịch Vụ AiNetsoft", 
-            "<article><h3>Thỏa thuận sử dụng nền tảng</h3>" +
-            "<p>Bằng việc truy cập ứng dụng AiNetsoft, bạn đồng ý với các quy tắc giao dịch công bằng của chúng tôi.</p></article>");
-        
-        seedIfMissing("privacy", "Chính Sách Bảo Mật Thông Tin", 
-            "<article><h3>Bảo vệ quyền riêng tư</h3>" +
-            "<p>Mọi thông tin cá nhân của bạn được mã hóa 256-bit và cam kết không chia sẻ cho bên thứ ba.</p></article>");
-        
-        seedIfMissing("trach-nhiem-nguoi-dung", "Trách nhiệm của khách hàng", 
-            "<article><h3>Quy tắc mua sắm an toàn</h3>" +
-            "<p>Khách hàng cần bảo mật thông tin tài khoản và chịu trách nhiệm về các giao dịch phát sinh.</p></article>");
-
-
-        // --- SECTION C: TRẢ HÀNG & HOÀN TIỀN (Returns) ---
-        seedIfMissing("return-policy", "Quy Định Trả Hàng & Hoàn Tiền", 
-            "<article><h3>Chính sách hoàn trả dễ dàng</h3>" +
-            "<p>Người mua có quyền yêu cầu trả hàng trong vòng 7 ngày nếu có bằng chứng video mở hộp.</p></article>");
-        
-        seedIfMissing("huong-dan-hoan-tien", "Quy trình nhận lại tiền hoàn", 
-            "<article><h3>Phương thức tài chính</h3>" +
-            "<p>Tiền sẽ được hoàn trả về Ví AiNetsoft hoặc tài khoản ngân hàng của bạn trong 3-5 ngày làm việc.</p></article>");
-
-
-        // --- SECTION D: TÀI KHOẢN & MUA SẮM ---
-        seedIfMissing("tai-khoan", "Trung Tâm Hỗ Trợ Tài Khoản", 
-            "<h3>Quản lý hồ sơ</h3><p>Hướng dẫn cập nhật thông tin cá nhân, địa chỉ và bảo mật 2 lớp.</p>");
-        
-        seedIfMissing("doi-mat-khau", "Quy trình thay đổi mật khẩu", 
-            "<h3>Bảo mật tài khoản</h3><p>Vào Cài đặt -> Bảo mật để cập nhật mật khẩu mới.</p>");
-
-        seedIfMissing("mua-sam", "Cẩm nang mua sắm thông minh tại AiNetsoft", 
-            "<h3>Khám phá ưu đãi</h3><p>Hướng dẫn săn Deal, sử dụng Voucher và tham gia livestream bán hàng.</p>");
-
-        seedIfMissing("huong-dan-dat-hang", "Cách đặt hàng chi tiết 2026", 
-            "<article><h3>5 bước đặt hàng nhanh chóng</h3>" +
-            "<p>1. Tìm sản phẩm -> 2. Xem Feedback -> 3. Thêm vào giỏ -> 4. Chọn thanh toán -> 5. Theo dõi vận chuyển.</p></article>");
-
-
-        // --- SECTION E: VỀ CHÚNG TÔI & TUYỂN DỤNG ---
-        seedIfMissing("about-us", "Giới thiệu về Hệ sinh thái AiNetsoft", 
-            "<h3>Tầm nhìn 2026</h3><p>Trở thành nền tảng thương mại điện tử kết nối thông minh nhất Việt Nam.</p>");
-        
-        seedIfMissing("careers", "Cơ hội nghề nghiệp tại AiNetsoft", 
-            "<h3>Gia nhập đội ngũ</h3><p>Chúng tôi luôn tìm kiếm những tài năng trẻ trong lĩnh vực AI và E-commerce.</p>");
-        
-        seedIfMissing("van-hoa-cong-ty", "Văn hóa doanh nghiệp AiNetsoft", 
-            "<h3>Môi trường làm việc</h3><p>Linh hoạt, sáng tạo, và luôn lấy con người làm trọng tâm.</p>");
-
-
-        // --- 🚀 SECTION F: PRODUCTION METADATA ---
+        seedIfMissing("shipping-policy", "Chính Sách Vận Chuyển AiNetsoft", "<article><h3>Quy trình giao nhận chuyên nghiệp</h3><p>Chúng tôi đảm bảo hàng hóa được đóng gói cẩn thận và bàn giao cho đơn vị vận chuyển trong vòng 24h.</p><h4>Danh sách đối tác tin cậy</h4><ul><li>SPX Express</li><li>GHTK</li><li>Viettel Post</li></ul></article>");
+        seedIfMissing("phi-van-chuyen", "Hướng dẫn tính phí vận chuyển", "<article><h3>Cơ chế phí ship minh bạch</h3><p>Phí vận chuyển được tính dựa trên cân nặng thực tế hoặc cân nặng quy đổi của kiện hàng.</p></article>");
+        seedIfMissing("thoi-gian-giao-hang", "Thời gian nhận hàng dự kiến", "<article><h3>Cam kết tiến độ giao hàng</h3><p>Khu vực nội thành: Giao nhanh 24h.<br>Khu vực vùng sâu vùng xa: 5-7 ngày làm việc.</p></article>");
+        seedIfMissing("legal", "Trung Tâm Pháp Lý & Bảo Mật AiNetsoft", "<article><h3>Cam kết tuân thủ pháp luật</h3><p>AiNetsoft luôn đặt tính minh bạch và bảo mật thông tin khách hàng lên hàng đầu.</p><p>Vui lòng xem chi tiết Điều khoản dịch vụ và Chính sách bảo mật ở menu bên trái.</p></article>");
+        seedIfMissing("terms", "Điều Khoản Sử Dụng Dịch Vụ AiNetsoft", "<article><h3>Thỏa thuận sử dụng nền tảng</h3><p>Bằng việc truy cập ứng dụng AiNetsoft, bạn đồng ý với các quy tắc giao dịch công bằng của chúng tôi.</p></article>");
+        seedIfMissing("privacy", "Chính Sách Bảo Mật Thông Tin", "<article><h3>Bảo vệ quyền riêng tư</h3><p>Mọi thông tin cá nhân của bạn được mã hóa 256-bit và cam kết không chia sẻ cho bên thứ ba.</p></article>");
+        seedIfMissing("trach-nhiem-nguoi-dung", "Trách nhiệm của khách hàng", "<article><h3>Quy tắc mua sắm an toàn</h3><p>Khách hàng cần bảo mật thông tin tài khoản và chịu trách nhiệm về các giao dịch phát sinh.</p></article>");
+        seedIfMissing("return-policy", "Quy Định Trả Hàng & Hoàn Tiền", "<article><h3>Chính sách hoàn trả dễ dàng</h3><p>Người mua có quyền yêu cầu trả hàng trong vòng 7 ngày nếu có bằng chứng video mở hộp.</p></article>");
+        seedIfMissing("huong-dan-hoan-tien", "Quy trình nhận lại tiền hoàn", "<article><h3>Phương thức tài chính</h3><p>Tiền sẽ được hoàn trả về Ví AiNetsoft hoặc tài khoản ngân hàng của bạn trong 3-5 ngày làm việc.</p></article>");
+        seedIfMissing("tai-khoan", "Trung Tâm Hỗ Trợ Tài Khoản", "<h3>Quản lý hồ sơ</h3><p>Hướng dẫn cập nhật thông tin cá nhân, địa chỉ và bảo mật 2 lớp.</p>");
+        seedIfMissing("doi-mat-khau", "Quy trình thay đổi mật khẩu", "<h3>Bảo mật tài khoản</h3><p>Vào Cài đặt -> Bảo mật để cập nhật mật khẩu mới.</p>");
+        seedIfMissing("mua-sam", "Cẩm nang mua sắm thông minh tại AiNetsoft", "<h3>Khám phá ưu đãi</h3><p>Hướng dẫn săn Deal, sử dụng Voucher và tham gia livestream bán hàng.</p>");
+        seedIfMissing("huong-dan-dat-hang", "Cách đặt hàng chi tiết 2026", "<article><h3>5 bước đặt hàng nhanh chóng</h3><p>1. Tìm sản phẩm -> 2. Xem Feedback -> 3. Thêm vào giỏ -> 4. Chọn thanh toán -> 5. Theo dõi vận chuyển.</p></article>");
+        seedIfMissing("about-us", "Giới thiệu về Hệ sinh thái AiNetsoft", "<h3>Tầm nhìn 2026</h3><p>Trở thành nền tảng thương mại điện tử kết nối thông minh nhất Việt Nam.</p>");
+        seedIfMissing("careers", "Cơ hội nghề nghiệp tại AiNetsoft", "<h3>Gia nhập đội ngũ</h3><p>Chúng tôi luôn tìm kiếm những tài năng trẻ trong lĩnh vực AI và E-commerce.</p>");
+        seedIfMissing("van-hoa-cong-ty", "Văn hóa doanh nghiệp AiNetsoft", "<h3>Môi trường làm việc</h3><p>Linh hoạt, sáng tạo, và luôn lấy con người làm trọng tâm.</p>");
         seedIfMissing("footer_company_name", "Tên Công Ty", "CÔNG TY TNHH AINETSOFT VIỆT NAM");
         seedIfMissing("footer_address", "Địa chỉ trụ sở", "A2.804 Hưng Ngân Garden, Dương Thị Mười, Trung Mỹ Tây, TP. Hồ Chí Minh, Việt Nam");
         seedIfMissing("footer_hotline", "Hotline / CSKH", "1900 12336 (miễn phí)");
@@ -219,167 +126,52 @@ public class DataSeeder implements CommandLineRunner {
         seedIfMissing("footer_tax_code", "Mã số thuế", "04410045331");
         seedIfMissing("footer_registration_date", "Ngày cấp đăng ký", "10/02/2024");
         seedIfMissing("footer_issuing_agency", "Nơi cấp đăng ký", "Sở KH&ĐT TP. Hồ Chí Minh");
-
-
-        // --- 🚀 SECTION G: SOCIAL ICONS & BCT BADGES ---
         seedIfMissing("social_youtube", "YouTube Official", "https://youtube.com/@ainetsoft");
         seedIfMissing("social_facebook", "Facebook Official", "https://facebook.com/ainetsoft.official");
 
         String pathBct = localDomain + "/uploads/system/logo-bct.png";
         String pathZalo = localDomain + "/uploads/system/zalo_logo.png";
-
-        String bctData1 = "{\"img\":\"" + pathBct + "\",\"link\":\"https://online.gov.vn/Home/WebDetails/123\"}";
-        String bctData2 = "{\"img\":\"" + pathBct + "\",\"link\":\"https://online.gov.vn/Home/AppDetails/456\"}";
-        String zaloData = "{\"img\":\"" + pathZalo + "\",\"link\":\"https://zalo.me/0909123456\"}";
-
-        seedIfMissing("footer_badge_1", "Badge BCT 1 (Link)", bctData1);
-        seedIfMissing("footer_badge_2", "Badge BCT 2 (Link)", bctData2);
-        seedIfMissing("footer_badge_3", "Badge BCT 3 / Icon Phụ", zaloData);
-
-
-        // --- 🚀 SECTION H: APP STORE LINKS & QR ---
-        String qrContent = "{\"img\":\"https://api.qrserver.com/v1/create-qr-code/?size=300x300&data=https://ainetsoft.com\",\"link\":\"https://ainetsoft.com/download\"}";
-        String iosContent = "{\"img\":\"https://upload.wikimedia.org/wikipedia/commons/3/3c/Download_on_the_App_Store_Badge.svg\",\"link\":\"https://ainetsoft.com/ios\"}";
-        String androidContent = "{\"img\":\"https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg\",\"link\":\"https://ainetsoft.com/android\"}";
-
-        seedIfMissing("app_qr_code", "App: QR Code", qrContent);
-        seedIfMissing("app_ios_link", "App: iOS Store", iosContent);
-        seedIfMissing("app_android_link", "App: Android Store", androidContent);
-
-        log.info("✅ Production Articles, App Stores, and BCT paths seeded.");
+        seedIfMissing("footer_badge_1", "Badge BCT 1 (Link)", "{\"img\":\"" + pathBct + "\",\"link\":\"https://online.gov.vn/Home/WebDetails/123\"}");
+        seedIfMissing("footer_badge_2", "Badge BCT 2 (Link)", "{\"img\":\"" + pathBct + "\",\"link\":\"https://online.gov.vn/Home/AppDetails/456\"}");
+        seedIfMissing("footer_badge_3", "Badge BCT 3 / Icon Phụ", "{\"img\":\"" + pathZalo + "\",\"link\":\"https://zalo.me/0909123456\"}");
+        seedIfMissing("app_qr_code", "App: QR Code", "{\"img\":\"https://api.qrserver.com/v1/create-qr-code/?size=300x300&data=https://ainetsoft.com\",\"link\":\"https://ainetsoft.com/download\"}");
+        seedIfMissing("app_ios_link", "App: iOS Store", "{\"img\":\"https://upload.wikimedia.org/wikipedia/commons/3/3c/Download_on_the_App_Store_Badge.svg\",\"link\":\"https://ainetsoft.com/ios\"}");
+        seedIfMissing("app_android_link", "App: Android Store", "{\"img\":\"https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg\",\"link\":\"https://ainetsoft.com/android\"}");
     }
 
-    // --- 🚀 SYNC 2: HELP TREE (100% PRESERVED) ---
     private void seedHelpTree() {
         if (helpNodeRepository.count() > 0) return;
-        log.info("🌳 Building Sidebar Hierarchy Tree (Shopee Style Folders)...");
+        ContentNode cat1 = new ContentNode(); cat1.setTitle("Mua Sắm & Thanh Toán"); cat1.setSlug("mua-sam"); cat1.setType("CATEGORY"); cat1.setDisplayOrder(1); cat1 = helpNodeRepository.save(cat1);
+        ContentNode cat1_s1 = new ContentNode(); cat1_s1.setTitle("Cách đặt hàng"); cat1_s1.setSlug("huong-dan-dat-hang"); cat1_s1.setType("ARTICLE"); cat1_s1.setParentId(cat1.getId()); cat1_s1.setDisplayOrder(1); helpNodeRepository.save(cat1_s1);
+        ContentNode cat1_s2 = new ContentNode(); cat1_s2.setTitle("Các phương thức thanh toán"); cat1_s2.setSlug("phi-van-chuyen"); cat1_s2.setType("ARTICLE"); cat1_s2.setParentId(cat1.getId()); cat1_s2.setDisplayOrder(2); helpNodeRepository.save(cat1_s2);
 
-        // 1. Folder: MUA SẮM & THANH TOÁN
-        ContentNode cat1 = new ContentNode();
-        cat1.setTitle("Mua Sắm & Thanh Toán"); cat1.setSlug("mua-sam");
-        cat1.setType("CATEGORY"); cat1.setDisplayOrder(1);
-        cat1 = helpNodeRepository.save(cat1);
+        ContentNode cat2 = new ContentNode(); cat2.setTitle("Vận Chuyển & Giao Nhận"); cat2.setSlug("shipping-policy"); cat2.setType("CATEGORY"); cat2.setDisplayOrder(2); cat2 = helpNodeRepository.save(cat2);
+        ContentNode cat2_s1 = new ContentNode(); cat2_s1.setTitle("Thông tin chung"); cat2_s1.setSlug("shipping-policy"); cat2_s1.setType("ARTICLE"); cat2_s1.setParentId(cat2.getId()); cat2_s1.setDisplayOrder(1); helpNodeRepository.save(cat2_s1);
+        ContentNode cat2_s2 = new ContentNode(); cat2_s2.setTitle("Chi phí vận chuyển"); cat2_s2.setSlug("phi-van-chuyen"); cat2_s2.setType("ARTICLE"); cat2_s2.setParentId(cat2.getId()); cat2_s2.setDisplayOrder(2); helpNodeRepository.save(cat2_s2);
+        ContentNode cat2_s3 = new ContentNode(); cat2_s3.setTitle("Thời gian giao hàng"); cat2_s3.setSlug("thoi-gian-giao-hang"); cat2_s3.setType("ARTICLE"); cat2_s3.setParentId(cat2.getId()); cat2_s3.setDisplayOrder(3); helpNodeRepository.save(cat2_s3);
 
-        ContentNode cat1_s1 = new ContentNode();
-        cat1_s1.setTitle("Cách đặt hàng"); cat1_s1.setSlug("huong-dan-dat-hang");
-        cat1_s1.setType("ARTICLE"); cat1_s1.setParentId(cat1.getId());
-        cat1_s1.setDisplayOrder(1); helpNodeRepository.save(cat1_s1);
+        ContentNode cat3 = new ContentNode(); cat3.setTitle("Trả Hàng & Hoàn Tiền"); cat3.setSlug("return-policy"); cat3.setType("CATEGORY"); cat3.setDisplayOrder(3); cat3 = helpNodeRepository.save(cat3);
+        ContentNode cat3_s1 = new ContentNode(); cat3_s1.setTitle("Quy định chung"); cat3_s1.setSlug("return-policy"); cat3_s1.setType("ARTICLE"); cat3_s1.setParentId(cat3.getId()); cat3_s1.setDisplayOrder(1); helpNodeRepository.save(cat3_s1);
+        ContentNode cat3_s2 = new ContentNode(); cat3_s2.setTitle("Hướng dẫn hoàn tiền"); cat3_s2.setSlug("huong-dan-hoan-tien"); cat3_s2.setType("ARTICLE"); cat3_s2.setParentId(cat3.getId()); cat3_s2.setDisplayOrder(2); helpNodeRepository.save(cat3_s2);
 
-        ContentNode cat1_s2 = new ContentNode();
-        cat1_s2.setTitle("Các phương thức thanh toán"); cat1_s2.setSlug("phi-van-chuyen");
-        cat1_s2.setType("ARTICLE"); cat1_s2.setParentId(cat1.getId());
-        cat1_s2.setDisplayOrder(2); helpNodeRepository.save(cat1_s2);
+        ContentNode cat4 = new ContentNode(); cat4.setTitle("Quản Lý Tài Khoản"); cat4.setSlug("tai-khoan"); cat4.setType("CATEGORY"); cat4.setDisplayOrder(4); cat4 = helpNodeRepository.save(cat4);
+        ContentNode cat4_s1 = new ContentNode(); cat4_s1.setTitle("Thông tin cá nhân"); cat4_s1.setSlug("tai-khoan"); cat4_s1.setType("ARTICLE"); cat4_s1.setParentId(cat4.getId()); cat4_s1.setDisplayOrder(1); helpNodeRepository.save(cat4_s1);
+        ContentNode cat4_s2 = new ContentNode(); cat4_s2.setTitle("Thay đổi mật khẩu"); cat4_s2.setSlug("doi-mat-khau"); cat4_s2.setType("ARTICLE"); cat4_s2.setParentId(cat4.getId()); cat4_s2.setDisplayOrder(2); helpNodeRepository.save(cat4_s2);
 
+        ContentNode cat5 = new ContentNode(); cat5.setTitle("Về AiNetsoft"); cat5.setSlug("about-us"); cat5.setType("CATEGORY"); cat5.setDisplayOrder(5); cat5 = helpNodeRepository.save(cat5);
+        ContentNode cat5_s1 = new ContentNode(); cat5_s1.setTitle("Giới thiệu doanh nghiệp"); cat5_s1.setSlug("about-us"); cat5_s1.setType("ARTICLE"); cat5_s1.setParentId(cat5.getId()); cat5_s1.setDisplayOrder(1); helpNodeRepository.save(cat5_s1);
+        ContentNode cat5_s2 = new ContentNode(); cat5_s2.setTitle("Văn hóa làm việc"); cat5_s2.setSlug("van-hoa-cong-ty"); cat5_s2.setType("ARTICLE"); cat5_s2.setParentId(cat5.getId()); cat5_s2.setDisplayOrder(2); helpNodeRepository.save(cat5_s2);
 
-        // 2. Folder: VẬN CHUYỂN & GIAO NHẬN
-        ContentNode cat2 = new ContentNode();
-        cat2.setTitle("Vận Chuyển & Giao Nhận"); cat2.setSlug("shipping-policy");
-        cat2.setType("CATEGORY"); cat2.setDisplayOrder(2);
-        cat2 = helpNodeRepository.save(cat2);
+        ContentNode cat6 = new ContentNode(); cat6.setTitle("Cơ Hội Nghề Nghiệp"); cat6.setSlug("careers"); cat6.setType("CATEGORY"); cat6.setDisplayOrder(6); cat6 = helpNodeRepository.save(cat6);
+        ContentNode cat6_s1 = new ContentNode(); cat6_s1.setTitle("Vị trí tuyển dụng"); cat6_s1.setSlug("careers"); cat6_s1.setType("ARTICLE"); cat6_s1.setParentId(cat6.getId()); cat6_s1.setDisplayOrder(1); helpNodeRepository.save(cat6_s1);
 
-        ContentNode cat2_s1 = new ContentNode();
-        cat2_s1.setTitle("Thông tin chung"); cat2_s1.setSlug("shipping-policy");
-        cat2_s1.setType("ARTICLE"); cat2_s1.setParentId(cat2.getId());
-        cat2_s1.setDisplayOrder(1); helpNodeRepository.save(cat2_s1);
-
-        ContentNode cat2_s2 = new ContentNode();
-        cat2_s2.setTitle("Chi phí vận chuyển"); cat2_s2.setSlug("phi-van-chuyen");
-        cat2_s2.setType("ARTICLE"); cat2_s2.setParentId(cat2.getId());
-        cat2_s2.setDisplayOrder(2); helpNodeRepository.save(cat2_s2);
-
-        ContentNode cat2_s3 = new ContentNode();
-        cat2_s3.setTitle("Thời gian giao hàng"); cat2_s3.setSlug("thoi-gian-giao-hang");
-        cat2_s3.setType("ARTICLE"); cat2_s3.setParentId(cat2.getId());
-        cat2_s3.setDisplayOrder(3); helpNodeRepository.save(cat2_s3);
-
-
-        // 3. Folder: TRẢ HÀNG & HOÀN TIỀN
-        ContentNode cat3 = new ContentNode();
-        cat3.setTitle("Trả Hàng & Hoàn Tiền"); cat3.setSlug("return-policy");
-        cat3.setType("CATEGORY"); cat3.setDisplayOrder(3);
-        cat3 = helpNodeRepository.save(cat3);
-
-        ContentNode cat3_s1 = new ContentNode();
-        cat3_s1.setTitle("Quy định chung"); cat3_s1.setSlug("return-policy");
-        cat3_s1.setType("ARTICLE"); cat3_s1.setParentId(cat3.getId());
-        cat3_s1.setDisplayOrder(1); helpNodeRepository.save(cat3_s1);
-
-        ContentNode cat3_s2 = new ContentNode();
-        cat3_s2.setTitle("Hướng dẫn hoàn tiền"); cat3_s2.setSlug("huong-dan-hoan-tien");
-        cat3_s2.setType("ARTICLE"); cat3_s2.setParentId(cat3.getId());
-        cat3_s2.setDisplayOrder(2); helpNodeRepository.save(cat3_s2);
-
-
-        // 4. Folder: QUẢN LÝ TÀI KHOẢN
-        ContentNode cat4 = new ContentNode();
-        cat4.setTitle("Quản Lý Tài Khoản"); cat4.setSlug("tai-khoan");
-        cat4.setType("CATEGORY"); cat4.setDisplayOrder(4);
-        cat4 = helpNodeRepository.save(cat4);
-
-        ContentNode cat4_s1 = new ContentNode();
-        cat4_s1.setTitle("Thông tin cá nhân"); cat4_s1.setSlug("tai-khoan");
-        cat4_s1.setType("ARTICLE"); cat4_s1.setParentId(cat4.getId());
-        cat4_s1.setDisplayOrder(1); helpNodeRepository.save(cat4_s1);
-
-        ContentNode cat4_s2 = new ContentNode();
-        cat4_s2.setTitle("Thay đổi mật khẩu"); cat4_s2.setSlug("doi-mat-khau");
-        cat4_s2.setType("ARTICLE"); cat4_s2.setParentId(cat4.getId());
-        cat4_s2.setDisplayOrder(2); helpNodeRepository.save(cat4_s2);
-
-
-        // 5. Folder: VỀ AINETSOFT
-        ContentNode cat5 = new ContentNode();
-        cat5.setTitle("Về AiNetsoft"); cat5.setSlug("about-us");
-        cat5.setType("CATEGORY"); cat5.setDisplayOrder(5);
-        cat5 = helpNodeRepository.save(cat5);
-
-        ContentNode cat5_s1 = new ContentNode();
-        cat5_s1.setTitle("Giới thiệu doanh nghiệp"); cat5_s1.setSlug("about-us");
-        cat5_s1.setType("ARTICLE"); cat5_s1.setParentId(cat5.getId());
-        cat5_s1.setDisplayOrder(1); helpNodeRepository.save(cat5_s1);
-
-        ContentNode cat5_s2 = new ContentNode();
-        cat5_s2.setTitle("Văn hóa làm việc"); cat5_s2.setSlug("van-hoa-cong-ty");
-        cat5_s2.setType("ARTICLE"); cat5_s2.setParentId(cat5.getId());
-        cat5_s2.setDisplayOrder(2); helpNodeRepository.save(cat5_s2);
-
-
-        // 6. Folder: CƠ HỘI NGHỀ NGHIỆP
-        ContentNode cat6 = new ContentNode();
-        cat6.setTitle("Cơ Hội Nghề Nghiệp"); cat6.setSlug("careers");
-        cat6.setType("CATEGORY"); cat6.setDisplayOrder(6);
-        cat6 = helpNodeRepository.save(cat6);
-
-        ContentNode cat6_s1 = new ContentNode();
-        cat6_s1.setTitle("Vị trí tuyển dụng"); cat6_s1.setSlug("careers");
-        cat6_s1.setType("ARTICLE"); cat6_s1.setParentId(cat6.getId());
-        cat6_s1.setDisplayOrder(1); helpNodeRepository.save(cat6_s1);
-
-
-        // 7. Folder: PHÁP LÝ & BẢO MẬT
-        ContentNode cat7 = new ContentNode();
-        cat7.setTitle("Pháp Lý & Bảo Mật"); cat7.setSlug("legal");
-        cat7.setType("CATEGORY"); cat7.setDisplayOrder(7);
-        cat7 = helpNodeRepository.save(cat7);
-
-        ContentNode cat7_s1 = new ContentNode();
-        cat7_s1.setTitle("Điều khoản dịch vụ"); cat7_s1.setSlug("terms");
-        cat7_s1.setType("ARTICLE"); cat7_s1.setParentId(cat7.getId());
-        cat7_s1.setDisplayOrder(1); helpNodeRepository.save(cat7_s1);
-
-        ContentNode cat7_s2 = new ContentNode();
-        cat7_s2.setTitle("Chính sách bảo mật"); cat7_s2.setSlug("privacy");
-        cat7_s2.setType("ARTICLE"); cat7_s2.setParentId(cat7.getId());
-        cat7_s2.setDisplayOrder(2); helpNodeRepository.save(cat7_s2);
-
-        log.info("✅ Sidebar Hierarchy (Folders and Nested Items) successfully built.");
+        ContentNode cat7 = new ContentNode(); cat7.setTitle("Pháp Lý & Bảo Mật"); cat7.setSlug("legal"); cat7.setType("CATEGORY"); cat7.setDisplayOrder(7); cat7 = helpNodeRepository.save(cat7);
+        ContentNode cat7_s1 = new ContentNode(); cat7_s1.setTitle("Điều khoản dịch vụ"); cat7_s1.setSlug("terms"); cat7_s1.setType("ARTICLE"); cat7_s1.setParentId(cat7.getId()); cat7_s1.setDisplayOrder(1); helpNodeRepository.save(cat7_s1);
+        ContentNode cat7_s2 = new ContentNode(); cat7_s2.setTitle("Chính sách bảo mật"); cat7_s2.setSlug("privacy"); cat7_s2.setType("ARTICLE"); cat7_s2.setParentId(cat7.getId()); cat7_s2.setDisplayOrder(2); helpNodeRepository.save(cat7_s2);
     }
 
-    // --- 🚀 SYNC 3: FOOTER MENU (100% PRESERVED) ---
     private void seedFooterMenus() {
         if (footerMenuRepository.count() > 0) return;
-        log.info("📂 Seeding Footer LinksSynced...");
-
         FooterMenu col1 = new FooterMenu();
         col1.setCategoryTitle("CHĂM SÓC KHÁCH HÀNG"); col1.setDisplayOrder(1);
         col1.setItems(Arrays.asList(
@@ -407,49 +199,44 @@ public class DataSeeder implements CommandLineRunner {
         return item;
     }
 
-    // --- 🚀 INFRASTRUCTURE: PARTNER LOGOS (100% PRESERVED) ---
     private void seedFooterIcons() {
         if (footerIconRepository.count() > 0) return;
-        log.info("💳 Seeding Official Partners...");
         String pBase = localDomain + "/uploads/system/payment_partner/";
         String sBase = localDomain + "/uploads/system/vanchuyen_partner/";
-        List<FooterIcon> list = new ArrayList<>();
-        list.add(FooterIcon.builder().name("Visa").imgUrl(pBase + "visa.png").category("PAYMENT").displayOrder(1).active(true).build());
-        list.add(FooterIcon.builder().name("MoMo").imgUrl(pBase + "momo.png").category("PAYMENT").displayOrder(2).active(true).build());
-        list.add(FooterIcon.builder().name("SPX").imgUrl(sBase + "spx.png").category("SHIPPING").displayOrder(1).active(true).build());
-        list.add(FooterIcon.builder().name("GHTK").imgUrl(sBase + "ghtk.png").category("SHIPPING").displayOrder(2).active(true).build());
-        footerIconRepository.saveAll(list);
+        footerIconRepository.saveAll(Arrays.asList(
+            FooterIcon.builder().name("Visa").imgUrl(pBase + "visa.png").category("PAYMENT").displayOrder(1).active(true).build(),
+            FooterIcon.builder().name("MoMo").imgUrl(pBase + "momo.png").category("PAYMENT").displayOrder(2).active(true).build(),
+            FooterIcon.builder().name("SPX").imgUrl(sBase + "spx.png").category("SHIPPING").displayOrder(1).active(true).build(),
+            FooterIcon.builder().name("GHTK").imgUrl(sBase + "ghtk.png").category("SHIPPING").displayOrder(2).active(true).build()
+        ));
     }
 
-    // --- 🚀 CORE INFRASTRUCTURE (100% PRESERVED) ---
-
+    // 🚀 FIXED: Thêm .enabled(true) cho toàn bộ User
     private void seedGlobalAdmin() {
         if (!userRepository.existsByEmail(adminEmail)) {
             User admin = User.builder()
                 .email(adminEmail).fullName(adminFullName).password(passwordEncoder.encode(adminPassword))
-                .roles(new HashSet<>(Set.of("ADMIN", "USER"))).permissions(new HashSet<>(Set.of("ALL_ACCESS")))
-                .isGlobalAdmin(true).accountStatus("ACTIVE").createdAt(LocalDateTime.now()).updatedAt(LocalDateTime.now()).build();
+                .roles(new HashSet<>(Arrays.asList("ADMIN", "USER"))).permissions(new HashSet<>(Arrays.asList("ALL_ACCESS")))
+                .isGlobalAdmin(true).accountStatus("ACTIVE")
+                .emailVerified(true) 
+                .enabled(true) // <--- CHÌA KHÓA LÀ ĐÂY
+                .createdAt(LocalDateTime.now()).updatedAt(LocalDateTime.now()).build();
             userRepository.save(admin);
-            log.info("✅ Global Admin established: " + adminEmail);
         }
     }
 
     private List<ShippingMethod> seedShippingMethods() {
         if (shippingMethodRepository.count() > 0) return shippingMethodRepository.findAll();
-        List<ShippingMethod> list = new ArrayList<>();
         ShippingMethod s1 = new ShippingMethod(); s1.setName("Hỏa Tốc"); s1.setBaseCost(208600.0); s1.setActive(true);
-        list.add(s1);
         ShippingMethod s2 = new ShippingMethod(); s2.setName("Nhanh"); s2.setBaseCost(28700.0); s2.setActive(true);
-        list.add(s2);
-        return shippingMethodRepository.saveAll(list);
+        return shippingMethodRepository.saveAll(Arrays.asList(s1, s2));
     }
 
     private void seedReportReasons() {
         if (reportReasonRepository.count() == 0) {
             String[] reasons = {"Hàng giả", "Phản cảm", "Hàng cấm", "Lừa đảo", "Hình sai", "Khác"};
             for (String r : reasons) {
-                ReportReason rr = new ReportReason();
-                rr.setName(r); rr.setActive(true);
+                ReportReason rr = new ReportReason(); rr.setName(r); rr.setActive(true);
                 reportReasonRepository.save(rr);
             }
         }
@@ -460,8 +247,7 @@ public class DataSeeder implements CommandLineRunner {
         String[] cats = {"Máy Tính", "Điện Thoại", "Thời Trang", "Gia Dụng", "Sức Khỏe", "Sách", "Đồ Chơi", "Âm Thanh", "Dịch Vụ IT", "TiVi", "Thiết Bị VP", "Ô Tô", "Làm Đẹp", "Văn Phòng", "Tiết Kiệm", "Dịch Vụ VP"};
         List<Category> saved = new ArrayList<>();
         for (String c : cats) {
-            Category cat = new Category();
-            cat.setName(c); cat.setSlug(c.toLowerCase().replace(" ", "-")); cat.setActive(true);
+            Category cat = new Category(); cat.setName(c); cat.setSlug(c.toLowerCase().replace(" ", "-")); cat.setActive(true);
             saved.add(categoryRepository.save(cat));
         }
         return saved;
@@ -469,37 +255,49 @@ public class DataSeeder implements CommandLineRunner {
 
     private void seedFeedbackTemplates() {
         if (feedbackTemplateRepository.count() == 0) {
-            List<FeedbackTemplate> templates = Arrays.asList(
+            feedbackTemplateRepository.saveAll(Arrays.asList(
                 FeedbackTemplate.builder().title("Hồ sơ hợp lệ").content("Chào mừng bạn gia nhập!").type("SELLER_REJECTION").build(),
                 FeedbackTemplate.builder().title("CCCD mờ").content("Chụp lại ảnh CCCD.").type("SELLER_REJECTION").build()
-            );
-            feedbackTemplateRepository.saveAll(templates);
+            ));
         }
     }
-
-    // --- 🚀 BUSINESS MOCK DATA (SYNCED FOR MULTI-SELLER) ---
 
     private void seedDefaultSellers(List<Category> savedCats, List<ShippingMethod> globalMethods) {
         List<User> sellersToSeed = new ArrayList<>();
         
-        // 1. Primary Official Mall
-        if (!userRepository.existsByEmail("seller@ainetsoft.com")) {
+        User official = userRepository.findByEmail("seller@ainetsoft.com").orElse(null);
+        if (official == null) {
             sellersToSeed.add(User.builder()
                 .email("seller@ainetsoft.com").fullName("AiNetsoft Mall Official").password(passwordEncoder.encode(adminPassword))
-                .roles(new HashSet<>(Set.of("SELLER", "USER"))).sellerVerification("VERIFIED").accountStatus("ACTIVE")
+                .roles(new HashSet<>(Arrays.asList("SELLER", "USER"))).sellerVerification("VERIFIED").accountStatus("ACTIVE")
+                .emailVerified(true) 
+                .enabled(true) // <--- VÀ ĐÂY
                 .shopProfile(User.ShopProfile.builder().shopName("AiNetsoft Mall").shopSlug("ainetsoft-mall").build()).build());
+        } else {
+            if (official.getShopProfile() == null || official.getShopProfile().getShopSlug() == null) {
+                official.setShopProfile(User.ShopProfile.builder().shopName("AiNetsoft Mall").shopSlug("ainetsoft-mall").build());
+                userRepository.save(official);
+            }
         }
 
-        // 2. Specialized Sellers (A, B, C)
         String[] prefixes = {"a", "b", "c"};
         String[] shopNames = {"Hitech Center", "Fashion World", "Smart Home Store"};
         for (int i = 0; i < prefixes.length; i++) {
             String email = "seller_" + prefixes[i] + "@ainetsoft.com";
-            if (!userRepository.existsByEmail(email)) {
+            User seller = userRepository.findByEmail(email).orElse(null);
+            
+            if (seller == null) {
                 sellersToSeed.add(User.builder()
                     .email(email).fullName(shopNames[i]).password(passwordEncoder.encode(adminPassword))
-                    .roles(new HashSet<>(Set.of("SELLER", "USER"))).sellerVerification("VERIFIED").accountStatus("ACTIVE")
+                    .roles(new HashSet<>(Arrays.asList("SELLER", "USER"))).sellerVerification("VERIFIED").accountStatus("ACTIVE")
+                    .emailVerified(true) 
+                    .enabled(true) // <--- VÀ ĐÂY
                     .shopProfile(User.ShopProfile.builder().shopName(shopNames[i]).shopSlug("seller-" + prefixes[i]).build()).build());
+            } else {
+                if (seller.getShopProfile() == null || seller.getShopProfile().getShopSlug() == null) {
+                    seller.setShopProfile(User.ShopProfile.builder().shopName(shopNames[i]).shopSlug("seller-" + prefixes[i]).build());
+                    userRepository.save(seller);
+                }
             }
         }
 
@@ -526,7 +324,7 @@ public class DataSeeder implements CommandLineRunner {
                         .categoryId(cat.getId()).categoryName(cat.getName())
                         .sellerId(seller.getId())
                         .shopName(shopName)
-                        .sellerSlug(slug)
+                        .sellerSlug(slug) 
                         .status("APPROVED")
                         .imageUrls(Arrays.asList("https://picsum.photos/seed/" + (prodGlobalCount) + "/600/600"))
                         .build();
@@ -537,116 +335,83 @@ public class DataSeeder implements CommandLineRunner {
 
     private void seedSubAdmin() {
         if (!userRepository.existsByEmail("mod@ainetsoft.com")) {
-            User m = new User();
-            m.setEmail("mod@ainetsoft.com"); m.setFullName("Moderator Team");
-            m.setPassword(passwordEncoder.encode(adminPassword)); m.setRoles(new HashSet<>(Set.of("ADMIN")));
-            m.setAccountStatus("ACTIVE"); userRepository.save(m);
+            User m = new User(); m.setEmail("mod@ainetsoft.com"); m.setFullName("Moderator Team");
+            m.setPassword(passwordEncoder.encode(adminPassword)); m.setRoles(new HashSet<>(Arrays.asList("ADMIN")));
+            m.setAccountStatus("ACTIVE"); 
+            m.setEmailVerified(true); 
+            m.setEnabled(true); // <--- VÀ ĐÂY
+            userRepository.save(m);
         }
     }
 
     private void seedRegularUsers() {
         if (!userRepository.existsByEmail("user@ainetsoft.com")) {
-            User u = new User();
-            u.setEmail("user@ainetsoft.com"); u.setFullName("Test Consumer");
-            u.setPassword(passwordEncoder.encode(adminPassword)); u.setRoles(new HashSet<>(Set.of("USER")));
-            u.setAccountStatus("ACTIVE"); userRepository.save(u);
+            User u = new User(); u.setEmail("user@ainetsoft.com"); u.setFullName("Test Consumer");
+            u.setPassword(passwordEncoder.encode(adminPassword)); u.setRoles(new HashSet<>(Arrays.asList("USER")));
+            u.setAccountStatus("ACTIVE"); 
+            u.setEmailVerified(true); 
+            u.setEnabled(true); // <--- VÀ ĐÂY
+            userRepository.save(u);
         }
     }
 
     private void seedPendingModeration(List<Category> savedCats, List<ShippingMethod> globalMethods) {
         if (!userRepository.existsByEmail("pending@ainetsoft.com")) {
-            User p = new User();
-            p.setEmail("pending@ainetsoft.com"); p.setFullName("Pending Merchant");
-            p.setPassword(passwordEncoder.encode(adminPassword)); p.setRoles(new HashSet<>(Set.of("USER")));
-            p.setAccountStatus("PENDING_SELLER"); userRepository.save(p);
+            User p = new User(); p.setEmail("pending@ainetsoft.com"); p.setFullName("Pending Merchant");
+            p.setPassword(passwordEncoder.encode(adminPassword)); p.setRoles(new HashSet<>(Arrays.asList("USER")));
+            p.setAccountStatus("PENDING_SELLER"); 
+            p.setEmailVerified(true); 
+            p.setEnabled(true); // <--- VÀ ĐÂY NỮA
+            userRepository.save(p);
         }
     }
 
     private void seedIfMissing(String slug, String title, String content) {
         if (!systemContentRepository.existsBySlug(slug)) {
             SystemContent sc = new SystemContent();
-            sc.setSlug(slug); sc.setTitle(title); sc.setHtmlContent(content);
+            sc.setSlug(slug); 
+            sc.setTitle(title); 
+            sc.setHtmlContent(content);
             sc.setLastUpdated(LocalDateTime.now());
             systemContentRepository.save(sc);
         }
     }
 
-    // --- 🚀 FINANCE & BANKING SYNC (PHASE 4 FINAL) ---
-
-    /**
-     * 🚀 NEW: Seeds the Bank Account Profile for the seller.
-     * This fills the empty form seen in image_d58806.png
-     */
     private void seedBankAccounts() {
         User sellerA = userRepository.findByEmail("seller_a@ainetsoft.com").orElse(null);
-        if (sellerA == null) return;
+        if (sellerA == null || bankAccountRepository.existsByUserId(sellerA.getId())) return;
 
-        // Uses the custom query defined in Step 1
-        if (bankAccountRepository.existsByUserId(sellerA.getId())) return;
-
-        BankAccount bank = BankAccount.builder()
-                .userId(sellerA.getId())
-                .bankName("ACB")
-                .accountNumber("0322222222") //
-                .accountHolder("CAC THI CHO") //
-                .isDefault(true)
-                .createdAt(LocalDateTime.now())
-                .build();
-
+        BankAccount bank = BankAccount.builder().userId(sellerA.getId()).bankName("ACB").accountNumber("0322222222")
+                .accountHolder("CAC THI CHO").isDefault(true).createdAt(LocalDateTime.now()).build();
         bankAccountRepository.save(bank);
-        log.info("🏦 Bank Account Profile established for: " + sellerA.getFullName());
     }
 
-    /**
-     * 🚀 FINANCE SEEDER: Transaction History
-     * Matches Bank Details: ACB / 0322222222 / CAC THI CHO
-     */
     private void seedWithdrawalTestData() {
-        User sellerA = userRepository.findByEmail("seller_a@ainetsoft.com")
-                .orElse(null);
+        User sellerA = userRepository.findByEmail("seller_a@ainetsoft.com").orElse(null);
+        if (sellerA == null || withdrawalRepository.countBySellerId(sellerA.getId()) > 0) return;
 
-        if (sellerA == null) {
-            log.error("❌ Could not find seller_a to seed financial data!");
-            return;
-        }
-
-        String testSellerId = sellerA.getId(); 
-        if (withdrawalRepository.countBySellerId(testSellerId) > 0) return;
-
-        log.info("💰 Seeding Financial History with Name Snapshots for: " + sellerA.getFullName());
-
-        // 1. Revenue: Create COMPLETED orders (Total: 650,000 VND)
-        orderRepository.saveAll(List.of(
-            Order.builder()
-                .status("COMPLETED")
-                .items(List.of(OrderItem.builder().sellerId(testSellerId).price(500000.0).quantity(1).build()))
+        orderRepository.saveAll(Arrays.asList(
+            Order.builder().status("COMPLETED")
+                .items(Arrays.asList(OrderItem.builder().sellerId(sellerA.getId()).price(500000.0).quantity(1).build()))
                 .createdAt(LocalDateTime.now().minusDays(3)).build(),
-            Order.builder()
-                .status("COMPLETED")
-                .items(List.of(OrderItem.builder().sellerId(testSellerId).price(150000.0).quantity(1).build()))
+            Order.builder().status("COMPLETED")
+                .items(Arrays.asList(OrderItem.builder().sellerId(sellerA.getId()).price(150000.0).quantity(1).build()))
                 .createdAt(LocalDateTime.now().minusDays(2)).build()
         ));
 
-        // 2. Withdrawal Records WITH Snapshots for Admin readability
         WithdrawalRequest oldReq = WithdrawalRequest.builder()
-                .sellerId(testSellerId)
-                .shopName(sellerA.getShopProfile().getShopName()) // Snapshot
-                .sellerFullName(sellerA.getFullName())           // Snapshot
-                .amount(100000.0).status("COMPLETED")
-                .bankName("ACB").accountNumber("0322222222").accountHolder("CAC THI CHO") //
+                .sellerId(sellerA.getId()).shopName(sellerA.getShopProfile().getShopName())
+                .sellerFullName(sellerA.getFullName()).amount(100000.0).status("COMPLETED")
+                .bankName("ACB").accountNumber("0322222222").accountHolder("CAC THI CHO")
                 .createdAt(LocalDateTime.now().minusDays(10)).processedAt(LocalDateTime.now().minusDays(9))
                 .build();
 
         WithdrawalRequest pendingReq = WithdrawalRequest.builder()
-                .sellerId(testSellerId)
-                .shopName(sellerA.getShopProfile().getShopName())
-                .sellerFullName(sellerA.getFullName())
-                .amount(50000.0).status("PENDING")
-                .bankName("ACB").accountNumber("0322222222").accountHolder("CAC THI CHO") //
-                .createdAt(LocalDateTime.now().minusMinutes(30))
-                .build();
+                .sellerId(sellerA.getId()).shopName(sellerA.getShopProfile().getShopName())
+                .sellerFullName(sellerA.getFullName()).amount(50000.0).status("PENDING")
+                .bankName("ACB").accountNumber("0322222222").accountHolder("CAC THI CHO")
+                .createdAt(LocalDateTime.now().minusMinutes(30)).build();
 
-        withdrawalRepository.saveAll(List.of(oldReq, pendingReq));
-        log.info("✅ SUCCESS: Finance history linked to Seller ID: {}", testSellerId);
+        withdrawalRepository.saveAll(Arrays.asList(oldReq, pendingReq));
     }
 }
